# sandbox

./: .cspell.json  .gitignore  .gitmodules  README.md
algorithm/dynamic-programming/: knapsack.cpp  max-sum.cpp  subset-sum.cpp
cpp/: argparse.hpp  fixed_queue.cpp  namespace.cpp  uuid.cpp  version_check.cpp
cpp/basic/: allocate.md  copy_disable.md  exception.md  lambda.md  move.md  ostream_vs_sstream.md  pointer.md  structured_bindings.md  template.md  typename.md
cpp/boost/: README.md  boost_array.cpp  boost_assert.cpp  boost_optional.cpp  circular_buffer.cpp
cpp/boost/core/: boost_optional.cpp
cpp/boost/python/: CMakeLists.txt  README.md  basic.cpp
cpp/c++17/: fold_expression.cpp  structured_bindings.cpp
cpp/cmake/: README.md  builtin-module.md  cmake.md  command.md
cpp/cuda/: README.md  hello.cu  matrix_add.cu  vector_add.cu
cpp/gnuplot/: sample.cpp
cpp/kdtree/: CMakeLists.txt  README.md
cpp/kdtree/include/: kdtree.hpp
cpp/kdtree/src/: test_kdtree.cpp
cpp/lanelet2/: README.md  depends.repos
cpp/modern/: allocate.md  move.md
cpp/multi_thread/: sample_openmp.cpp  sample_thread.cpp
cpp/mylib/: CMakeLists.txt  README.md
cpp/mylib/src/: CMakeLists.txt  main.cpp
cpp/numcpp/include/: ndarray.hpp  shape.hpp  types.hpp
cpp/opencv/: CMakeLists.txt
cpp/opencv/include/: agc.hpp  debug.hpp
cpp/opencv/scripts/: agc.py
cpp/opencv/src/: agc.cpp  main.cpp
cpp/pcl/: README.md
cpp/pcl/01.pcd_read_write/: CMakeLists.txt  pcd_view.cpp  pcd_write.cpp
cpp/pcl/02.concatenate_clouds/: CMakeLists.txt  concatenate_clouds.cpp
cpp/pcl/03.3d_registration/: CMakeLists.txt
cpp/pcl/03.3d_registration/src/: icp_after_feature_registration.cpp  icp_sample.cpp  visualize_correspondences.h
cpp/pcl/04.openni_grabber/: CMakeLists.txt  openni_grabber.cpp  simple_openni_processor.cpp  simple_openni_processor.h
cpp/pcl/05.kdtree_search/: kdtree_search.cpp
cpp/pcl/06.point_cloud_compression/: simple_openni_viewer.cpp  simple_openni_viewer.h  test.cpp
cpp/pcl/07.octree_search/: CMakeLists.txt  octree_search.cpp
cpp/pcl/09.cloud_viewer/: CMakeLists.txt  cloud_viewer.cpp
cpp/pcl/10.range_image_visualization/: CMakeLists.txt  range_image_visualization.cpp
cpp/pcl/11.pcl_visualizer/: CMakeLists.txt  pcl_visualizer.cpp
cpp/pcl/12.pcl_painter2D/: CMakeLists.txt  pcl_painter2D.cpp
cpp/pcl/13.convert_pcd/: CMakeLists.txt
cpp/pcl/13.convert_pcd/data/: Tshirt_obj.pcd
cpp/pcl/13.convert_pcd/pcd/: box.pcd  box_vfh.pcd  table.pcd  table_.pcd  test.pcd  test_vfh.pcd
cpp/pcl/13.convert_pcd/src/: kitti2pcd.cpp  obj2pcd.cpp  obj_to_pcd.cpp  pcd_read.cpp
cpp/pcl/14.histogram_based_feature/: CMakeLists.txt  fpfh.cpp  vfh.cpp
cpp/pcl/15.Cascaded_Lidar_Segmentation/: CMakeLists.txt  slope_seg.cpp
cpp/pcl/16.Lidar_Segmentation/: CMakeLists.txt
cpp/pcl/16.Lidar_Segmentation/render/: box.h  render.cpp  render.h
cpp/pcl/16.Lidar_Segmentation/sensors/: lidar.h
cpp/pcl/16.Lidar_Segmentation/src/: CVC.cpp  environment.cpp  processPonitClouds.cpp  processPonitClouds.h
cpp/pcl/pcdio/: CMakeLists.txt  read.cpp  write.cpp
cpp/pybind11/: README.md  hello.cpp  hello.py
cpp/render/: CMakeLists.txt
cpp/render/include/: matrix.hpp  model.h  shader.hpp  tga.h  vector.hpp
cpp/render/include/geometry/: matrix.hpp  vector.hpp
cpp/render/src/: main.cpp  matrix.cpp  model.cpp  test.cpp  tga.cpp  vector.cpp
cpp/render/src/geometry/: matrix.cpp  vector.cpp
cpp/std/: lambda.cpp
cpp/stl/: CMakeLists.txt  README.md  main.cpp  stl.cpp  stl.h
cpp/tensorrt/: README.md
cpp/tensorrt/intro/: ioHelper.cpp  ioHelper.hpp  network.cpp  network.hpp  simpleOnnx.cpp
go/: README.md
go/dojo1/: .gitignore
go/dojo1/converter/: converter.go
go/dojo1/extcvt/: README.md  go.mod  main.go
go/dojo1/io/: go.mod  main.go  main_test.go
go/dojo1/typing_game/: go.mod  main.go
go/go-Handson/basic/: array.go  assert1.go  assert2.go  assert3.go  channel1.go  channel2.go  channel3.go  channel4.go  channel5.go  hoge.go  if.go  interface1.go  interface2.go  interface3.go  interface4.go  interface5.go  mutex1.go  nil_reciver.go  pointer1.go  pointer2.go  pointer3.go  pointer4.go  pointer5.go  routine.go  shared_memory.go  slice.go  struct2.go  struct3.go  struct4.go  struct5.go  type1.go  type2.go
go/go-Handson/fyne_sample/: border_layout.go  button.go  checkbox.go  entry.go  fixed_grid_layout.go  form.go  grid_layout.go  grid_layout_raws.go  group.go  hello.go  label.go  progressbar.go  radio.go  scroll_container.go  select.go  slider.go  tabcontainer.go  theme.go
go/greetings/: greetings.go  greetings_test.go
go/hello/: hello  main.go
knowledge/design-pattern/: README.md
knowledge/in-vehicle/: network-protocols.md
knowledge/mongodb/: schema.md
knowledge/network/: 01.basic-commands.md  01a.ifconfig-vs-ip.md  04.can.md  README.md
knowledge/onnx/: operators.md  torch2onnx.md
knowledge/programming-paradigms/: README.md
knowledge/ray_tracing/: README.md
knowledge/torch/: custom_cpp_and_cuda_op.md
knowledge/type-systems/: README.md
network/: README.md
python/: coroutine.py
python/multitask/: multitask.md
ros2/: README.md  log.md  qos.md
ros2/sample_rviz_plugins/: CMakeLists.txt  README.md  package.xml  plugins_description.xml
ros2/sample_rviz_plugins/include/sample_rviz_plugins/: dial_panel.hpp
ros2/src/my_ros2_pkg/: CMakeLists.txt  package.xml  setup.cfg
ros2/src/my_ros2_pkg/include/my_ros2_pkg/: double_subscriber.hpp
ros2/src/my_ros2_pkg/node_scripts/: grid_map_publisher.py  publisher_member_function.py  subscriber_member_function.py
ros2/src/my_ros2_pkg/src/: .#add_two_ints_server.cpp  add_two_ints_server.cpp  double_subscriber.cpp  grid_map_publisher.cpp  my_node.cpp  publisher_member_function.cpp  subscriber_member_function.cpp
rust/: README.md  faq.md  hello  optimization.md
rust/2.guessing_game/src/: main.rs
rust/7.crate_sample/: Cargo.toml  README.md
rust/by-example/: Cargo.toml
rust/lifetime/: README.md
rust/the-book/: Cargo.toml
tcp/: 1.basic-commands.md  2.namespace.md  3.router.md
trouble-shooting/devices/: usb.md
(+109 files in other folders)
