<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_ros2_pkg</name>
  <version>0.0.0</version>
  <description>My first ros2 package</description>
  <maintainer email="kotaro.uetake@tier4.jp">ktro2828</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <exec_depend>rclpy</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

  entry_points={
  'console_scripts': [
  'pytalker = my_ros2_pkg.node_scripts.publisher_member_function:main',
  'pylistener = my_ros2_pkg.node_scripts.subscriber_member_function:main',
  ],
  }
</package>
